<resources>
    <string name="app_name">Data Persistent Android</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="create_file">Buat File</string>
    <string name="update_file">Ubah File</string>
    <string name="read_file">Baca File</string>
    <string name="del_file">Hapus File</string>
    <string name="hasil">Hasil</string>
    <string name="hint_title">Nama file</string>

    <string name="del_success_message">Berhasil menghapus file %s</string>
    <string name="del_fail_message">Gagal menghapus file %s</string>
    <string name="create_success_message">Berhasil membuat file %s</string>
    <string name="create_fail_message">Gagal membuat file %s</string>
    <string name="update_success_message">Berhasil mengubah file %s</string>
    <string name="update_fail_message">Gagal mengubah file %s</string>
    <string name="read_success_message">Berhasil membaca file %s</string>
    <string name="read_fail_message">Gagal membaca file %s</string>

    <string name="file_not_found">File tidak ditemukan</string>
    <string name="update">Ubah</string>
    <string name="create">Buat</string>
    <string name="read">Baca</string>
    <string name="delete">Hapus</string>
    <string name="hint_content">Isi konten</string>
    <string name="id_not_found_message">Id %d tidak ditemukan</string>
    <string name="command_not_found_message">Perintah tidak ditemukan</string>
    <string name="permission_granted">Izin diterima</string>
    <string name="permission_denied">Izin ditolak</string>
    <string name="state_file_error_message">Error state</string>
</resources>