<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/button_create_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_file" />

        <Button
            android:id="@+id/button_update_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_file" />

        <Button
            android:id="@+id/button_read_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_file" />

        <Button
            android:id="@+id/button_del_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/del_file" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hasil"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <FrameLayout
            android:id="@+id/frame_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</ScrollView>